[package]
name = "miasql"
version = "0.0.6"
edition = "2024"
authors = ["Daniel Laible"]
description = "A save, secure and fast sql database"
repository ="https://github.com/daniellaible/miasql.git"

[dependencies]
uuid = { version = "1.23.1", features = ["v4"] }
regex = "1.12.3"
tokio = { version = "1", features = ["full"] }
database = "0.5.0"