[package]
name = "miasql"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Laible"]
description = "A save, secure and fast sql database"
repository ="https://github.com/daniellaible/miasql.git"

[dependencies]
uuid = { version = "1.23.1", features = ["v4"] }
sqlparser = "=0.62.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.32"
env_logger = "0.11.10"
anyhow = "1.0.103"

